The container seems not working

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,11 +7,10 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    container:
-      image: tomaka/cargo-web:latest
-    
     steps:
     - uses: actions/checkout@v1
+    - name: Install cargo-web
+      run: cargo install cargo-web
     - name: Build
       run: cargo web deploy --release
     - name: Deploy
