--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ edition = "2018"
 stdweb = "0.4.19"
 yew = "0.9.0"
 serde = "1.0.101"
-tacvm = { git = "https://github.com/MashPlant/tacvm.git" }
+tacvm = { git = "https://github.com/jiegec/tacvm.git" }
